# Movie-Recommender

./: 01_eda.py  CONTRIBUTING.md  LICENSE  Makefile  README.md  data_loader.py  evaluate.py  metrics.py  models.py  predict.py  preprocessing.py  pyproject.toml  recommender.py  requirements.txt  setup.py  test_metrics.py  test_models.py  test_recommender.py  train.py
.github/workflows/: main.yml
app/: streamlit_app.py
src/: __init__.py
tests/: __init__.py  test_metrics.py
