[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "movie-recommender"
version = "1.0.0"
description = "A movie recommendation system using collaborative filtering and content-based approaches"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "techn4r", email = "stepan.sivitsky@yandex.ru"}
]
keywords = ["machine-learning", "recommender-system", "collaborative-filtering", "movies", "movielens"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.0.270",
    "mypy>=1.0.0",
]
web = [
    "streamlit>=1.20.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "jupytext>=1.14.0",
]
all = [
    "movie-recommender[dev,web,notebooks]",
]

[project.scripts]
movie-train = "src.train:main"
movie-predict = "src.predict:main"
movie-evaluate = "src.evaluate:main"

[project.urls]
Homepage = "https://github.com/techn4r/movie-recommender"
Documentation = "https://github.com/techn4r/movie-recommender#readme"
Repository = "https://github.com/techn4r/movie-recommender"
Issues = "https://github.com/techn4r/movie-recommender/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.ruff_cache
    | \.venv
    | build
    | dist
    | data
    | models
)/
'''

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008", "C901"]

[tool.ruff.lint.isort]
known-first-party = ["src"]